fix alignment issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,6 @@ $custom-typography: mat-typography-config(
   margin-left: auto;
 }
 
+.mat-mini-fab{
+  align-items: baseline;
+}
